# audio

./: .gitignore  INTERNALS.md  README.md  straddle.yaml
esp-idf/: CMakeLists.txt  Kconfig  audio.cpp  audio.h  av_hdr.h  codec.cpp  codec.h  idf_component.yml  wav.cpp  wav.h
